# fairchem-mcp

./: .gitignore  README.md  pyproject.toml
examples/: claude_mcp_config.json
examples/alloys/: 01_elastic_tensor.md  01_elastic_tensor.py  02_convex_hull.md  02_convex_hull.py  03_alloy_design_loop.md  03_alloy_design_loop.py  README.md  _common.py
examples/catalysis/: 01_adsorption_energy.md  01_adsorption_energy.py  02_adsorption_sites.md  02_adsorption_sites.py  03_diffusion_barrier.md  03_diffusion_barrier.py  04_surface_stability.md  04_surface_stability.py  README.md  _common.py
examples/demo/: CUE_CARDS.md  README.md  RECORDING.md  conference_demo.py
examples/demo/recordings/: conference_demo.cast
examples/saddles/: 01_dimer_saddle.md  01_dimer_saddle.py  02_pounce_saddles.md  02_pounce_saddles.py  03_sella_saddle.md  03_sella_saddle.py  README.md  _common.py
src/fairchem_mcp/: __init__.py  deflation.py  diagnostics.py  domain.py  introspect.py  jobs.py  server.py  session.py
tests/: conftest.py  test_diagnostics.py  test_domain.py  test_elastic.py  test_eos.py  test_hull.py  test_introspect.py  test_jobs.py  test_lammps.py  test_minima.py  test_neb_phonon.py  test_saddles.py
