[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fairchem-mcp"
version = "0.1.0"
description = "An agent-steerable MCP server for FAIRChem / ASE simulations"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "John Kitchin", email = "jkitchin@andrew.cmu.edu" }]
license = { text = "MIT" }
keywords = ["fairchem", "ase", "mcp", "simulation", "materials", "chemistry"]

dependencies = [
    "mcp>=1.0",
    "ase>=3.22",
    "jedi>=0.19",
    "numpy",
    "scipy",
]

[project.optional-dependencies]
# fairchem itself is heavy (torch, models). It is optional: every tool except
# load_model works with plain ASE calculators (e.g. EMT), so the server is
# useful for development and testing without it.
fairchem = ["fairchem-core>=2.0"]
# LAMMPS as an ASE calculator (classical potentials, used as the force engine
# while ASE drives the dynamics). Optional; see the README for the macOS
# Homebrew-MPICH dylib note.
lammps = ["lammps"]
# Saddle-point / transition-state search backends (optional). The dimer method
# is built in (ASE); these add the other two routes: Sella (RFO optimizer) and
# POUNCE's multistart eigenvector following.
saddles = ["sella", "pounce-solver"]
test = ["pytest"]

[project.scripts]
fairchem-mcp = "fairchem_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/fairchem_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
